2000-12-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_boundary): Generate a random
	boundary if passed boundary is NULL.

2000-12-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-message.c (multipart_get_body): Traverses a MIME Part and
	'always' extracts the body assuming it exists. Extracts the
	preffered text type if it exists, otherwise returns the type less
	preferred.
	(g_mime_message_get_body): Use multipart_get_body if the toplevel
	part is a multipart.

2000-12-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* README: Updated with more RFCs, etc.

	* rfc/* Added a bunch more rfcs of interest.

2000-12-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-mime.c: Added test code for the address parser.

	* gmime-utils.c (g_mime_utils_quoted_encode_step): Updated. No
	longer need to special-case whitespace chars as they have been put
	into the gmime_special_table (a while ago).

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* Makefile.am: Install gmime.m4

	* gmime.m4: Added.

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_foreach): New convenience function for
	manipulating each subpart of a mime part.

	* gmime-message.c (g_mime_message_foreach_part): New convenience
	function for manipulating all mime parts of a message.

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* doc/sgml/*:
	* doc/html/*: Updated.

	* doc/gmime-sections.txt: Add g_mime_message_[g,s]et_message_id.

	* gmime-parser.c (construct_headers): Parse out Message-Id
	headers.

	* gmime-message.c (g_mime_message_destroy): Free the message id.
	(g_mime_message_set_message_id): New function to set the message
	id on a message.
	(g_mime_message_set_message_id): New accessor function for
	message-ids.
	(create_header): Write out the Message-Id if and only if it
	exists.

2000-11-29  Jeffrey Stedfast  <fejj@helixcode.com>

	* README: Updated.

	* doc/gmime-sections.txt: Added new functions.

	* doc/html/*: Updated.
